# krb5-appl

./: Makefile.in  README  aclocal.m4  autogen.sh  configure.ac  depfix.pl  fake-addrinfo.h  k5-platform.h  port-sockets.h  post.in  pre.in
bsd/: Makefile.in  daemon.c  defines.h  deps  forward.c  kcmd.c  klogind.M  krcp.c  krlogin.c  krlogind.c  krshd.c  kshd.M  login.c
gssftp/: Makefile.in
gssftp/ftp/: Makefile.in  cmds.c  deps  domacro.c  ftp.M  ftp.c  ftp_var.h  getpass.c  glob.c  main.c  pclose.c  radix.c  ruserpass.c  secure.c  secure.h
gssftp/ftpd/: Makefile.in  deps  ftpcmd.y  ftpd.M  ftpd.c  ftpd_var.h  logwtmp.c  secure.h
krb5-appl-1-0/: NOTICE  README  autogen.sh  k5-platform.h  k5-util.h
krb5-appl-1-0/bsd/: defines.h  forward.c  kcmd.c  klogind.M  krcp.c  krlogind.c  krsh.c  krshd.c  kshd.M  rcp.M
krb5-appl-1-0/gssftp/ftp/: cmdtab.c  domacro.c
krb5-appl-1-0/gssftp/ftpd/: Makefile.in  deps  ftpd.c  logwtmp.c  popen.c
krb5-appl-1-0/libmissing/: daemon.c  deps  herror.c  setsid.c
krb5-appl-1-0/libpty/: err.c  libpty.h  logwtmp.c  open_ctty.c  pty-int.h  pty_paranoia.c
krb5-appl-1-0/telnet/: Makefile.in
krb5-appl-1-0/telnet/libtelnet/: Makefile.in  auth.c  deps  enc_des.c  getent.c  gettytab.c  misc-proto.h  misc.c
krb5-appl-1-0/telnet/telnet/: Makefile.in  authenc.c  commands.c  deps  sys_bsd.c  tn3270.c
krb5-appl-1-0/telnet/telnetd/: Makefile.in  authenc.c  ext.h  global.c  slc.c  state.c  telnetd-ktd.c  telnetd.8  utility.c
krb5-appl-1-0/tests/: Makefile.in
krb5-appl-1-0/tests/config/: default.exp
krb5-appl-1-0/tests/krb-standalone/: rcp.exp
krb5-appl-1-0/tests/resolve/: deps  resolve.c
libmissing/: Makefile.in  asprintf.c  deps  dummy.c  fake-addrinfo.c  getdtablesize.c  getopt.c  herror.c  parsetos.c  setenv.c  strcasecmp.c  strdup.c  strerror.c  strftime.c  strlcpy.c
libpty/: Makefile.in  cleanup.c  deps  dump-utmp.c  err.c  getpty.c  init.c  init_slave.c  libpty.h  open_slave.c  pty-int.h  sane_hostname.c  update_utmp.c  update_wtmp.c  vhangup.c  void_assoc.c
telnet/libtelnet/: Makefile.in  auth.c  deps  enc_des.c  encrypt.c  forward.c  genget.c  getopt.c  herror.c  kerberos5.c  mem.c  misc.c  parsetos.c  setenv.c  setsid.c  spx.c  strchr.c  strftime.c  strrchr.c
telnet/telnet/: Makefile.in  commands.c  deps  main.c  network.c  ring.c  sys_bsd.c  telnet.c  terminal.c  utilities.c
telnet/telnetd/: Makefile.in  defs.h  deps  sys_term.c  telnetd.c  termio-tn.c  termios-tn.c  termstat.c  utility.c
tests/: Makefile.in  deps
tests/config/: default.exp
tests/krb-root/: rlogin.exp  telnet.exp
tests/krb-standalone/: gssftp.exp  rcp.exp  rsh.exp
tests/resolve/: Makefile.in  resolve.c
